--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "azhari creative",
   "license": "ISC",
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
-    "axios": "^1.11.0",
-    "baileys": "^6.7.17",
-    "cli-color": "^2.0.4",
-    "mime-types": "^2.1.35",
-    "pino": "^9.3.2",
-    "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0"
-  }
+  "@hapi/boom": "^10.0.1",
+  "axios": "^1.11.0",
+  "baileys": "^6.7.17",
+  "cheerio": "^1.0.0-rc.12", // <-- cheerio ditambahkan di sini
+  "cli-color": "^2.0.4",
+  "mime-types": "^2.1.35",
+  "node-fetch": "^3.3.2",
+  "pino": "^9.3.2",
+  "qrcode": "^1.5.4",
+  "qrcode-terminal": "^0.12.0"
+}
 }
