--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "@hapi/boom": "^10.0.1",
   "axios": "^1.11.0",
   "baileys": "^6.7.17",
-  "cheerio": "^1.0.0-rc.12", // <-- cheerio ditambahkan di sini
+  "cheerio": "^1.0.0-rc.12",
   "cli-color": "^2.0.4",
   "mime-types": "^2.1.35",
   "node-fetch": "^3.3.2",
